# uFork

./: .gitignore  .gitmodules  Makefile  README.md  asm.md  blob.md  crlf.md  deno.json  design.md  lisp.md  ocaps.md  proto.md  replete.json  scheme.md  shell.nix  sponsor.md  summary.md  test.js  ufork.c  ufork.md
minimal-wasm/: Cargo.toml  build.sh  no_std.txt  profile_size.sh  serve.sh  shell.nix  watch.sh
minimal-wasm/src/: device.rs  host.rs  lib.rs  ufork.rs
minimal-wasm/www/: index.html  index.js  server.mjs
ufork-wasm/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  asm.md  asm_linter.js  asm_sublime_linter.py  awp.md  awp_device.md  blob_dev.md  build.js  build.sh  build_optimized.sh  crlf.md  demo.html  demo.js  demo_server.js  dev-build.sh  gc.md  io_dev.md  opt_build.sh  replete.js  replete.json  run_asm_tests.js  scheme.md  serve.js  serve.sh  sponsor.md  test.sh  ufork.js  vm.md
ufork-wasm/.cargo/: config.toml
ufork-wasm/examples/: ec2.sh
ufork-wasm/examples/grant_matcher/: README.md  donor.asm  donor.js  gm.asm  gm.js  keqd.asm  multicore.js  party.js  tls.js  webrtc.js
ufork-wasm/examples/node_tls_grant_matcher/: README.md  donor.asm  run.js
ufork-wasm/examples/peer_chat/: README.md  chat.asm  chat.html  chat.js  chat_db.js  chat_server.js  indexed_db.js
ufork-wasm/examples/stdio/: README.md  echo.asm  stdio.js
ufork-wasm/gm/: README.md  donor.asm  gm.asm  keqd.asm  run.js
ufork-wasm/lib/: awp_demo.asm  blob.asm  cell.asm  dev.asm  e_ring.asm  euclid.asm  fib.asm  fib.json  fork.asm  future.asm  grant_matcher.asm  lambda.asm  lib.asm  loop.asm  peg.asm  playground.asm  scm.asm  serial.asm  sponsor.asm  std.asm  std.json  test.asm  timer.asm
ufork-wasm/lib/requestors/: README.md  canceller.asm  delay.asm  thru.asm  time_limit.asm  timeout.asm
ufork-wasm/lib/unassemblable/: export_import.asm  if_to_fixnum.asm  indent_directive.asm  indent_label.asm  instr_to_data_chain.asm  instr_to_data_cont.asm  instr_to_data_ref.asm  instr_to_fixnum.asm  instr_to_module.asm  margin_export.asm  margin_instr.asm  missing_continuation_ref.asm  missing_import.asm  not_defined_cont.asm  not_defined_export.asm  not_defined_ref.asm  redefine.asm  typeq_fixnum.asm  (+2 more)
ufork-wasm/scm/: echo.scm  example.scm  fib.scm  future.scm
ufork-wasm/src/: any.rs  cons.rs  core.rs  device.rs  host.rs  lib.rs  quad.rs  queue.rs  ufork.rs
ufork-wasm/tests/: standalone.rs  web.rs
ufork-wasm/www/: asm_test.js  assemble.js  awp_device.js  dummy_transport.js  hexdump.js  index.html  index.js  oed.js  oed_lite.js  package.json  parseq.js  scheme.js  server.js  server.mjs  ufork.js
vm/wasm/: .gitignore  Cargo.toml  build.js
(+618 files in other folders)
