[package]
name = "ufork-wasm"
version = "0.1.0"
authors = ["Dale Schumacher <dalnefre@yahoo.com>"]
edition = "2018"
description = "uFork VM in Rust targeting WASM"
repository = "https://github.com/organix/uFork/tree/main/ufork-wasm"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
lol_alloc = "0.3.0"     		# a size-efficient allocator crate

[dev-dependencies]

[profile.release]
panic = "abort"					# abort on panic!()
opt-level = "s"					# optimize for small code size
lto = true              		# enable link time optimization
strip = true            		# strip debug symbols
