[package]
name = "ufork-wasm"
version = "0.1.0"
authors = ["Dale Schumacher <dalnefre@yahoo.com>"]
edition = "2021"
description = "uFork VM in Rust targeting WASM"
repository = "https://github.com/organix/uFork/tree/main/vm/wasm"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lol_alloc = { version = "0.4.0" }
ufork = { path = "../rs" }

[features]
default = ["no_std"]
no_std = []
